# opensearch-ml-quickstart

./: .gitignore  ISSUE_2_FIX.md  ISSUE_3_FIX.md  ISSUE_5_FIX.md  LICENSE  README.md  README2.md  docker-compose.yml  ingest.sh  main.py  pyproject.toml  pytest.ini  requirements.txt
client/: __init__.py  helper.py  index_utils.py  os_ml_client_wrapper.py
configs/: .env  __init__.py  config.py  configuration_manager.py  helper.py  osmlqs.yaml  tasks.py
connectors/: __init__.py  aos_bedrock_ml_connector.py  aos_connector_helper.py  aos_llm_connector.py  aos_ml_connector.py  config_strategies.py  embedding_connector.py  helper.py  llm_connector.py  ml_connector.py  os_llm_connector.py  os_ml_connector.py
data_process/: __init__.py  amazon_pqa_dataset.py  base_dataset.py  multi_cpr_dataset.py  qanda_file_reader.py  twitter_case_processor.py
datasets/: README.md
examples/: agent_tools.py  cmd_line_interface.py  cmd_line_params.py  conversational_agent.py  conversational_search.py  converse.py  demo.ipynb  dense_exact_search.py  dense_hnsw_search.py  dense_s3_search.py  dense_vs_lexical.ipynb  exact_search.py  hnsw_search.py  hybrid_local_search.py  hybrid_search.py  index_utils.py  lexical_search.py  multi_cpr_agent_tools.py  multi_cpr_conversational_agent.py  multi_cpr_conversational_search.py  multi_cpr_dense_search.py  multi_cpr_hybrid_search.py  multi_cpr_lexical_search.py  multi_cpr_semantic_search_workflow.py  print_utils.py  rag_processor.py  semantic_search_workflow.py  sparse_search.py  strands_search.py  workflow_example.py  workflow_with_template.py
(+108 files in other folders)
